--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
+body {
   font-family: Arial, sans-serif;
   background-color: #f8f9fa;
   color: #343a40;
-  /* width: 300px;
-  text-align: center; */
-} */
+  width: 350px;
+  text-align: center;
+} 
